# Project-Anymal_C

anymal_c_simple_description/: CMakeLists.txt  FindRBDL.cmake  controller_plugins.xml  package.xml
anymal_c_simple_description/config/: anymal_control.yaml
anymal_c_simple_description/launch/: anymal.launch
anymal_c_simple_description/src/: floating_base_controller.cpp  floating_base_controller.h  pseudo_inversion.h  set_command_FB.cpp
anymal_c_simple_description/urdf/: anymal.urdf  model.urdf  old.urdf
